# ai-auto-test

./: .env.example  .env.oracle.example  .gitignore  AGENTS.md  AIRETEST-并行开发计划.md  AIRETEST-当前平台分析与建设路线.md  AIRETEST-本地单机运行指南.md  AIRETEST-生产化改造与能力扩展开发设计.md  AIRETEST-迭代一开发记录.md  AIRETEST使用手册.md  AI测试平台-开发任务拆解.md  ORACLE部署与迁移.md  conftest.py  docker-compose.yml  pytest.ini  start_frontend.py
.github/: CI.md
.github/workflows/: ci.yml
ai-test-platform-design/: ai-test-platform.design  colors_and_type.css  generation-tree.json  orchestration-summary.json
ai-test-platform-design/pages/: ai-assistant.html  dashboard.html  quick-test.html  test-cases.html
airetest-improvement-doc/: airetest-improvement-doc.html
backend/: .dockerignore  Dockerfile  _verify_apis.py  alembic.ini  lint.ps1  migrate_add_fields.py  migrate_add_tables.py  migrate_new_modules.py  migrate_ui_enhancements.py  pyproject.toml  requirements.txt  run_server.py
frontend/: .dockerignore  .eslintrc.cjs  Dockerfile  index.html  package-lock.json  package.json  py_npm_install.py  registry_proxy.py  start-dev.bat  tsconfig.json  vite.config.ts
scripts/: backup-local.ps1  cleanup-local.ps1  local-runtime.ps1  local_data.py  restore-local.ps1  smoke_frontend_routes.py  start-docker.ps1  start-local.ps1  status-docker.ps1  status-local.ps1  stop-docker.ps1  stop-local.ps1
test-engine/: conftest.py  executor.py  pyproject.toml  request_builder.py  variable_extractor.py
test-engine/tests/: __init__.py  test_assertion_engine.py  test_executor.py  test_request_builder.py  test_variable_extractor.py
(+286 files in other folders)
